# ibis-hub

./: .conversation-names.json  .gitignore  .sessions.json  .sessions.json.GOOD  .sessions.json.bak.20260427-broken  DISTRIBUTION.md  index.html  package-lock.json  package.json  server.mjs  server.mjs.bak.20260505  start.bat  start.command  vite.config.ts  vitest.config.ts  繧ｹ繧ｿ繝・ヵ逕ｨ-縺輔＞縺励ｇ縺ｫ隱ｭ繧薙〒縺ｭ.txt
.github/workflows/: release.yml  test.yml  visual-test.yml
public/: manifest.json
scripts/: generate-pwa-icons.py  make-distribution-pdf.sh
src/: App.css  App.tsx  main.tsx  types.ts  useTauriTransport.ts  useWebSocket.ts  wcwidth.d.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty_manager.rs
src-tauri/src/native_terminal/: macos.rs  manager.rs  mod.rs  traits.rs  watcher.rs  windows.rs
src/components/: ConversationPanel.tsx  IbisLogo.tsx  NotificationBadge.tsx  Sidebar.tsx  SplashScreen.tsx  TerminalGrid.tsx  TerminalPane.tsx
src/hooks/: useNativeTerminalRect.ts
src/lib/: environmentUtils.ts  notify.ts  terminalUtils.ts
tests/unit/: cjkProvider.test.ts  messageFlow.test.ts  styles.test.ts  terminalUtils.test.ts
tests/visual/: box-drawing-test.html  box-drawing-test.ts  index.html  screenshot.mjs  vite.config.mjs
tools/: gpt.mjs
