[package]
name = "ibis-hub"
version = "0.2.0"
description = "Multi Claude Code session manager"
authors = ["you"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ibis_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
chrono = "0.4"

ureq = { version = "2", features = ["json"] }
minisign-verify = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"

# End-to-end updater verification binary (runs in CI)
[[bin]]
name = "verify-updater"
path = "src/bin/verify_updater.rs"

