[package]
name = "ibis-hub"
version = "0.2.0"
description = "Multi Claude Code session manager"
authors = ["you"]
edition = "2021"
license = "MIT"
# We have two binaries: the main Tauri app (src/main.rs → "ibis-hub") and
# the CI-only verify-updater. tauri-action runs `tauri build` which calls
# `cargo build` without --bin, so we need an explicit default.
default-run = "ibis-hub"

[[bin]]
name = "ibis-hub"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ibis_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
chrono = "0.4"

ureq = { version = "2", features = ["json"] }
minisign-verify = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"
# Native terminal overlay (Preview feature): AXAPI / CGWindowList / NSWindowLevel 経由で Terminal.app をペインに重ねる
core-foundation = "0.9"
core-graphics = "0.24"
accessibility-sys = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
# Native terminal overlay (Preview feature): wt.exe を WebView2 上の指定矩形に常時最前面で重ねる
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Console",
] }

# End-to-end updater verification binary (runs in CI)
[[bin]]
name = "verify-updater"
path = "src/bin/verify_updater.rs"

